--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Source Sans Pro, sans-serif;
     margin: 0;
     padding: 0;
     
@@ -12,7 +12,7 @@ header {
 }
 header h1 {
     margin: 0;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: Source Sans Pro, sans-serif;
 }
 section {
     margin: 2em 0;
