--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ header {
     background-color: #333;
     color: #fff;
     padding: 1em 0;
-    text-align: left; /* Align text to the left in the header */
+    text-align: center; /* Align text to the left in the header */
 }
 header h1 {
     margin: 0;
