--- a/style.css
+++ b/style.css
@@ -7,12 +7,13 @@ body {
 header {
     background-color: #333;
     color: #fff;
-    padding: 1em 0;
+    padding: 0.5em 0;
     text-align: center;
 }
 header nav {
     background-color: #333; /* Ensure nav background matches header */
-    padding: 0 0;
+    padding: 0.5em 0;
+    margin-top: 0; 
 }
 
 header h1 {
@@ -21,12 +22,12 @@ header h1 {
     text-align: center;
 }
 section {
-    margin: 2em 0 0 2em; /* Add margin to the left */
-    padding: 0 1em;
+    margin: 1em 0; /* Reduced top and bottom margin */
+    padding: 0 1em 0 2em; /* Add padding to the left */
     text-align: left; /* Align text to the left in sections */
 }
 .container {
-    padding-left: 1em; /* Add padding to the left */
+    padding-left: 2em; /* Add padding to the left */
 }
 .navbar {
     list-style-type: none;
@@ -38,7 +39,7 @@ section {
 
 .navbar li {
     display: inline;
-    padding: 14px 20px;
+    padding: 0.5em 1em;
 }
 
 .navbar li a {
