--- a/style.css
+++ b/style.css
@@ -4,16 +4,22 @@ body {
     padding: 0;
     background-color: #f4f4f4;
 }
+body, html {
+    margin: 0;
+    padding: 0;
+}
 header {
     background-color: #333;
     color: #fff;
     padding: 0.5em 0;
     text-align: center;
+    margin-bottom: 0;
 }
 header nav {
     background-color: #333; /* Ensure nav background matches header */
-    padding: 0.5em 0;
     margin-top: 0; 
+    padding: 0; /* Remove padding */
+    margin: 0; /* Remove margin */
 }
 
 header h1 {
