--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header nav {
 
 header h1 {
     margin: 0;
-    font-family: 'Source Sans Pro', sans-serif; /* Change the font style */
+    /* font-family: 'Source Sans Pro', sans-serif;  */
     text-align: center;
 }
 section {
