--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ header {
     background-color: #333;
     color: #fff;
     padding: 0.5em 0; /* Reduced padding */
-    text-align: left;
+    text-align: center;
     margin-bottom: 0; /* Remove bottom margin */
 }
 
